--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-toastify": "^8.1.0"
+    "react-select": "^5.2.2",
+    "react-toastify": "^8.1.0",
+    "reoverlay": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
