--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-select": "^5.2.2",
     "react-toastify": "^8.1.0",
     "reoverlay": "^1.0.3",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
