--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.25.0",
-    "next": "12.0.7",
-    "qrcode.react": "^1.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-select": "^5.2.2",
-    "react-toastify": "^8.1.0",
+    "axios": "^0.27.2",
+    "next": "^12.1.6",
+    "qrcode.react": "^3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.3.2",
+    "react-toastify": "^9.0.5",
     "reoverlay": "^1.0.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16",
-    "typescript": "4.5.4"
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.7.4",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
