--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "lodash.omit": "^4.5.0",
     "next": "^12.1.6",
     "qrcode.react": "^3.0.2",
     "react": "^18.2.0",
