--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.5",
     "reoverlay": "^1.0.3",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "zustand": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
